--- a/public/css/app.css
+++ b/public/css/app.css
@@ -52,7 +52,7 @@
   --bs-font-sans-serif: "Nunito", sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: var(--bs-font-sans-serif);
+  --bs-body-font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro";
   --bs-body-font-size: 0.9rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.6;
@@ -5761,7 +5761,7 @@ textarea.form-control-lg {
   z-index: 1080;
   display: block;
   margin: 0;
-  font-family: var(--bs-font-sans-serif);
+  font-family: 'Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro"';
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -5863,7 +5863,7 @@ textarea.form-control-lg {
   z-index: 1070;
   display: block;
   max-width: 276px;
-  font-family: var(--bs-font-sans-serif);
+  font-family: 'Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro"';
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -11286,6 +11286,149 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-#app {
+body {
+  background: #f6f5f4;
+  color: #333;
+  font-size: 16px;
+  width: 980px;
+  font-family: 'Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro"';
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul, p {
+  margin: 0;
+}
+
+a {
+  color: #333;
+  font-size: 16px;
+  text-decoration: none;
+}
+a:hover {
+  color: #CCC;
+}
+
+.header-container {
+  height: 80px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-container {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.flex-container {
+  width: 100%;
+  display: flex;
+}
+
+.main-container {
+  width: 70%;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.side-container {
+  width: 30%;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.todo-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.grid-container {
+  border-radius: 30px;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  align-items: center;
+}
+.grid-container-white {
+  background: #fff;
+}
+.grid-container-white:hover {
+  background: #CCC;
+}
+
+.title {
   font-size: 30px;
+  font-weight: bold;
+}
+.title-header {
+  color: #ffa0a7;
+  font-family: "Amatic SC", cursive;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: 15px;
+}
+
+.menu {
+  display: flex;
+  list-style: none;
+}
+
+.icon {
+  font-size: 30px;
+  line-height: 60px;
+  width: 60px;
+  text-align: center;
+}
+.icon-header {
+  font-size: 24px;
+}
+.icon-header:hover {
+  color: #CCC;
+}
+.icon-white {
+  color: #fff;
+}
+
+.circle-area {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.circle-area-blue {
+  background: #5656ff;
+}
+.circle-area-red {
+  background: #CC3333;
+}
+.circle-area-orange {
+  background: #FF9933;
+}
+.circle-area-gray {
+  background: #CCC;
+}
+
+.category-text {
+  font-size: 24px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  font-weight: bold;
+  width: 100%;
+  text-align: left;
+  padding-left: 5px;
+}
+.category-text-gray {
+  color: #CCC;
+}
+
+.task-count-area {
+  margin-top: 15px;
+  margin-right: 15px;
+  font-size: 38px;
+  text-align: center;
+  font-weight: bold;
 }
