--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11295,9 +11295,16 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+@media screen and (max-width: 768px) {
+  body {
+    width: 100%;
+    font-size: 12px;
+  }
+}
 
 ul, p {
   margin: 0;
+  padding: 0;
 }
 
 a {
@@ -11305,8 +11312,18 @@ a {
   font-size: 16px;
   text-decoration: none;
 }
+@media screen and (max-width: 768px) {
+  a {
+    font-size: 12px;
+  }
+}
 a:hover {
   color: #CCC;
+}
+
+img {
+  width: 100%;
+  border-radius: 50%;
 }
 
 .header-container {
@@ -11318,8 +11335,7 @@ a:hover {
 }
 
 .nav-container {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .flex-container {
@@ -11332,17 +11348,33 @@ a:hover {
   margin-left: 30px;
   margin-right: 30px;
 }
+@media screen and (max-width: 768px) {
+  .main-container {
+    width: 100%;
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+}
 
 .side-container {
   width: 30%;
   margin-left: 30px;
   margin-right: 30px;
 }
+@media screen and (max-width: 768px) {
+  .side-container {
+    display: none;
+  }
+}
+.side-container-task-page {
+  margin-top: 10px;
+}
 
 .todo-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
+  margin-bottom: 20px;
 }
 
 .grid-container {
@@ -11358,21 +11390,118 @@ a:hover {
   background: #CCC;
 }
 
+.mylist-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.list-container {
+  margin-bottom: 30px;
+}
+
+.user-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.user-container-responsive {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .user-container-responsive {
+    display: flex;
+  }
+}
+
+.responsive-button-container {
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .responsive-button-container {
+    display: block;
+  }
+}
+
+.tasknav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.search-box-container {
+  width: 90%;
+  background: #fff;
+  border-radius: 25px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.item-container {
+  margin-bottom: 15px;
+}
+
+.footer-container {
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  box-shadow: rgba(122, 122, 122, 0.288235) 0px -8px 8px -8px;
+  -webkit-box-shadow: rgba(122, 122, 122, 0.288235) 0px -8px 8px -8px;
+  -moz-box-shadow: rgba(122, 122, 122, 0.288235) 0px -8px 8px -8px;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .footer-container {
+    display: block;
+    position: fixed;
+    bottom: 0;
+  }
+}
+
 .title {
   font-size: 30px;
   font-weight: bold;
+  margin: 0;
 }
 .title-header {
   color: #ffa0a7;
-  font-family: "Amatic SC", cursive;
+  font-family: "Viga", sans-serif;
   margin-top: 15px;
   margin-bottom: 15px;
   margin-left: 15px;
+}
+.title-list {
+  margin-top: 2px;
+  padding-left: 15px;
+}
+.title-category {
+  padding-left: 15px;
+  font-size: 24px;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .menu {
   display: flex;
   list-style: none;
+  margin-left: 20px;
+  margin-right: 20px;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  text-align: center;
+}
+.menu-item {
+  width: 60px;
+  font-size: 12px;
 }
 
 .icon {
@@ -11381,22 +11510,67 @@ a:hover {
   width: 60px;
   text-align: center;
 }
+@media screen and (max-width: 768px) {
+  .icon {
+    font-size: 18px;
+    width: 40px;
+    line-height: 40px;
+  }
+}
 .icon-header {
   font-size: 24px;
 }
 .icon-header:hover {
   color: #CCC;
 }
+.icon-footer {
+  width: 40px;
+  line-height: 40px;
+  margin-top: 5px;
+}
+.icon-footer:hover {
+  color: #CCC;
+}
 .icon-white {
   color: #fff;
+}
+.icon-tasknav {
+  font-size: 18px;
+}
+.icon-search {
+  font-size: 14px;
+  line-height: normal;
+  width: auto;
+  margin-left: 15px;
+  color: #CCC;
+}
+.icon-item {
+  color: #CCC;
 }
 
 .circle-area {
   width: 60px;
   height: 60px;
   border-radius: 50%;
+}
+@media screen and (max-width: 768px) {
+  .circle-area {
+    width: 40px;
+    height: 40px;
+  }
+}
+.circle-area-category {
   margin-left: 20px;
   margin-top: 20px;
+}
+@media screen and (max-width: 768px) {
+  .circle-area-category {
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+}
+.circle-area-list {
+  margin-left: 20px;
 }
 .circle-area-blue {
   background: #5656ff;
@@ -11411,7 +11585,7 @@ a:hover {
   background: #CCC;
 }
 
-.category-text {
+.text {
   font-size: 24px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -11421,8 +11595,25 @@ a:hover {
   text-align: left;
   padding-left: 5px;
 }
-.category-text-gray {
+@media screen and (max-width: 768px) {
+  .text {
+    font-size: 14px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 10px;
+  }
+}
+.text-gray {
   color: #CCC;
+}
+.text-sidemenu {
+  font-size: 18px;
+}
+.text-nav {
+  margin: 0;
+  margin-left: -15px;
+  padding: 0;
+  font-size: 18px;
 }
 
 .task-count-area {
@@ -11431,4 +11622,89 @@ a:hover {
   font-size: 38px;
   text-align: center;
   font-weight: bold;
+}
+@media screen and (max-width: 768px) {
+  .task-count-area {
+    font-size: 18px;
+  }
+}
+
+.button {
+  color: #fff;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 40px;
+  font-weight: bold;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+@media screen and (max-width: 768px) {
+  .button {
+    display: none;
+  }
+}
+.button-area-responsive {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .button-responsive {
+    display: inline-block;
+  }
+}
+.button-blue {
+  background-color: #5656ff;
+}
+.button-orange {
+  background-color: #FF9933;
+}
+
+.list-item {
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #CCC;
+  position: relative;
+}
+.list-item:first-child {
+  border-radius: 30px 30px 0 0;
+}
+.list-item:last-child {
+  border-radius: 0 0 30px 30px;
+  border-bottom: none;
+}
+.list-item-left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.list-item-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.list-item-sidemenu, .list-item-task {
+  padding: 0;
+}
+.list-item-sidemenu:first-child, .list-item-task:first-child {
+  border-radius: 0 0 0 0;
+}
+.list-item-sidemenu:last-child, .list-item-task:last-child {
+  border-radius: 0 0 0 0;
+}
+.list-item-task {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.serachbox {
+  height: 30px;
+  width: calc(100% - 40px);
+  font-size: 14px;
 }
