--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,6 +56,7 @@ label, input[type='checkbox'] {
   cursor: pointer;
 }
 input[type="text"] {
+  font-size: $font-size_default;
   border: 0;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.5);
   cursor: pointer;
@@ -65,6 +66,7 @@ input[type="text"]:focus {
   outline: 0;
 }
 input[type="password"] {
+  font-size: $font-size_default;
   border: 0;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.5);
   cursor: pointer;
@@ -1151,7 +1153,7 @@ textarea{
 .searchbox{
   height: 30px;
   width: calc(100% - 40px);
-  font-size: $font-size_m;
+  font-size: $font-size_default;
   border: 0 !important;
   box-shadow: none !important;
   &:focus{
@@ -1274,8 +1276,7 @@ th {
     position: fixed;
     top: 0;
     left: 0;
-    
-  }
+  }  
 }
 .tab{
   display: flex;
