--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1304,8 +1304,7 @@ th {
   }
 }
 .account-container{
-  height: 100%;
-  height: -webkit-fill-available;
+  height: 120vh;
   width: 100%;
   z-index: 7;
   opacity: 1;
