--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -75,6 +75,9 @@ input[type="text"]:focus {
   box-shadow: 0 0 2px 0 rgba(255,153,0,1);
   outline: 0;
 }
+input[type="textarea"]{
+  font-size: $font-size_default;
+}
 input[type="password"] {
   font-size: $font-size_default;
   border: 0;
