readme途中まで作成　カテゴリー、タスク追加時の表示エラー修正

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,6 +65,9 @@ label, input[type='checkbox'] {
 input[type="file"] {
   display:none;
 }
+input,textarea {
+  -webkit-appearance: none;
+}
 input[type="text"] {
   font-size: $font-size_default;
   border: 0;
@@ -92,6 +95,7 @@ input[type="submit"] {
   }
 }
 textarea{
+  -webkit-appearance: none;
   cursor: pointer;
   font-size: $font-size_default;
 }
